--- a/index.html
+++ b/index.html
@@ -186,61 +186,61 @@
         <h2>Portfolio</h2>
         <div class="portfolio-items">
       <div class="portfolio-item dev">
-        <img src="images/coronation@2x.jpg">
+        <img src="images/coronation.jpg">
         <p class="portfolio-title">Corosponent App</p>
         <p class="portfolio-category">Front-end mobile development</p>
         <p class="portfolio-description">Using Wordpress as a backend tool to provide the REST-API I built a responsive single page web app using Ionic and Angular. The app’s features included downloading Corospondent issues for offline reading, bookmarking of articles, push notifications, sharing and note taking for each article.</p>
       </div>
 
       <div class="portfolio-item design">
-          <img src="images/wriggle@2x.jpg">
+          <img src="images/wriggle.jpg">
           <p class="portfolio-title">Wriggle and Rhyme</p>
           <p class="portfolio-category">Logo / web design / corporate identity</p>
           <p class="portfolio-description">I have been design for wriggle and rhyme for 9 years. I created the logo and all other elements relating to the company, including all the character illustrations</p>
         </div>
 
       <div class="portfolio-item dev">
-        <img src="images/AOR@2x.jpg">
+        <img src="images/aor.jpg">
         <p class="portfolio-title"><a href="https://www.alloutrugby.com" target="_blank">www.alloutrugby.com</a></p>
         <p class="portfolio-category">Front-end development</p>
         <p class="portfolio-description">Working as the sole frontend developer I created a Wordpress theme from underscores.me, using SASS, Gulp, Javascript. I had to link a lot of REST APIs for the Stats, widgets and Match Centre.</p>
       </div>
       <div class="portfolio-item design">
-          <img src="images/easy-cheetah@2x.jpg">
+          <img src="images/easy-cheetah.jpg">
           <p class="portfolio-title">Easy Cheetah</p>
           <p class="portfolio-category">Logo / web design</p>
           <p class="portfolio-description"></p>
         </div>
 
       <div class="portfolio-item dev">
-        <img src="images/sanlam-de@2x.jpg">
+        <img src="images/sanlam-de.jpg">
         <p class="portfolio-title"><a href="http://www.sanlamspf.co.za" target="_blank">www.sanlamspf.co.za</a></p>
         <p class="portfolio-category">Front-end development</p>
         <p class="portfolio-description">Working as the sole frontend developer I created a Wordpress theme from underscores.me, using SASS, Gulp, Javascript.</p>
       </div>
       <div class="portfolio-item dev">
-        <img src="images/visi@2x.jpg">
+        <img src="images/visi.jpg">
         <p class="portfolio-title"><a href="https://www.visi.co.za" target="_blank">www.visi.co.za</a></p>
         <p class="portfolio-category">Front-end development</p>
         <p class="portfolio-description">I created a child theme from a premium theme (simplemag) to build a new site for Visi.</p>
         
       </div>
       <div class="portfolio-item dev">
-        <img src="images/motherland@2x.jpg">
+        <img src="images/motherland.jpg">
         <p class="portfolio-title"><a href="http://www.motherlandcoffee.com" target="_blank">www.motherlandcoffee.com</a></p>
         <p class="portfolio-category">Wordpress theme development</p>
         <p class="portfolio-description">I created a Wordpress theme from underscores.me, using SASS, Gulp, Javascript for a supplied design. I used the Advanced Custom Fields plugin to make it easier for the client to customise the content</p>
         
       </div>
       <div class="portfolio-item dev">
-        <img src="images/wriggle-web@2x.jpg">
+        <img src="images/wriggle-web.jpg">
         <p class="portfolio-title"><a href="http://www.wriggleandrhyme.co.za" target="_blank">www.wriggleandrhyme.co.za</a></p>
         <p class="portfolio-category">Wordpress theme development</p>
         <p class="portfolio-description"></p>        
       </div>
 
       <div class="portfolio-item dev">
-          <img src="images/eachcheetah-web@2x.jpg">
+          <img src="images/eachcheetah-web.jpg">
           <p class="portfolio-title"><a href="http://www.easycheetah.com" target="_blank">www.easycheetah.com</a></p>
           <p class="portfolio-category">Wordpress theme development</p>
           <p class="portfolio-description"></p>
