--- a/index.html
+++ b/index.html
@@ -138,6 +138,17 @@
               <span class="circle"></span>
             </div>
           </li>
+          <li class="design">Sketch
+            <div class="skill-rating">
+              <span class="circle skilled"></span>
+              <span class="circle skilled"></span>
+              <span class="circle skilled"></span>
+              <span class="circle"></span>
+              <span class="circle"></span>
+              <span class="circle"></span>
+              <span class="circle"></span>
+            </div>
+          </li>
           <li class="dev">JAVASCRIPT
             <div class="skill-rating">
               <span class="circle skilled"></span>
@@ -174,8 +185,9 @@
           <li class="dev">CSS/JS pre-processing</li>
           <li class="design">Brochures / Leaflets</li>
           <li class="dev">Image design tools</li>
-          <li class="design">Posters</li>
+          <li class="design">Posters / Banners</li>
           <li class="dev">Wordpress theme development</li>
+          <li class="design">Company stationary</li>
           <li class="dev">VueJS, AngularJS and Ionic (v1)</li>
         </ul>
       </div>
@@ -187,22 +199,22 @@
         <div class="portfolio-items">
       <div class="portfolio-item dev">
         <img src="images/coronation.jpg">
-        <p class="portfolio-title">Corosponent App</p>
-        <p class="portfolio-category">Front-end mobile development</p>
+        <p class="portfolio-title">Corosponent App <a class="app" target="_blank" href="https://itunes.apple.com/za/app/corospondent/id1148973759?mt=8">iOS</a><a href="https://play.google.com/store/apps/details?id=com.dialogue.coronation&hl=en" target="_blank" class="app">Android</a></p>
+        <p class="portfolio-category more">Front-end mobile development</p>
         <p class="portfolio-description">Using Wordpress as a backend tool to provide the REST-API I built a responsive single page web app using Ionic and Angular. The app’s features included downloading Corospondent issues for offline reading, bookmarking of articles, push notifications, sharing and note taking for each article.</p>
       </div>
 
       <div class="portfolio-item design">
           <img src="images/wriggle.jpg">
           <p class="portfolio-title">Wriggle and Rhyme</p>
-          <p class="portfolio-category">Logo / web design / corporate identity</p>
+          <p class="portfolio-category more">Logo / web design / corporate identity</p>
           <p class="portfolio-description">I have been design for wriggle and rhyme for 9 years. I created the logo and all other elements relating to the company, including all the character illustrations</p>
         </div>
 
       <div class="portfolio-item dev">
         <img src="images/aor.jpg">
         <p class="portfolio-title"><a href="https://www.alloutrugby.com" target="_blank">www.alloutrugby.com</a></p>
-        <p class="portfolio-category">Front-end development</p>
+        <p class="portfolio-category more">Front-end development</p>
         <p class="portfolio-description">Working as the sole frontend developer I created a Wordpress theme from underscores.me, using SASS, Gulp, Javascript. I had to link a lot of REST APIs for the Stats, widgets and Match Centre.</p>
       </div>
       <div class="portfolio-item design">
@@ -215,20 +227,20 @@
       <div class="portfolio-item dev">
         <img src="images/sanlam-de.jpg">
         <p class="portfolio-title"><a href="http://www.sanlamspf.co.za" target="_blank">www.sanlamspf.co.za</a></p>
-        <p class="portfolio-category">Front-end development</p>
+        <p class="portfolio-category more">Front-end development</p>
         <p class="portfolio-description">Working as the sole frontend developer I created a Wordpress theme from underscores.me, using SASS, Gulp, Javascript.</p>
       </div>
       <div class="portfolio-item dev">
         <img src="images/visi.jpg">
         <p class="portfolio-title"><a href="https://www.visi.co.za" target="_blank">www.visi.co.za</a></p>
-        <p class="portfolio-category">Front-end development</p>
+        <p class="portfolio-category more">Front-end development</p>
         <p class="portfolio-description">I created a child theme from a premium theme (simplemag) to build a new site for Visi.</p>
         
       </div>
       <div class="portfolio-item dev">
         <img src="images/motherland.jpg">
         <p class="portfolio-title"><a href="http://www.motherlandcoffee.com" target="_blank">www.motherlandcoffee.com</a></p>
-        <p class="portfolio-category">Wordpress theme development</p>
+        <p class="portfolio-category more">Wordpress theme development</p>
         <p class="portfolio-description">I created a Wordpress theme from underscores.me, using SASS, Gulp, Javascript for a supplied design. I used the Advanced Custom Fields plugin to make it easier for the client to customise the content</p>
         
       </div>
