--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <li class="dev">Image design tools</li>
           <li class="design">Posters / Banners</li>
           <li class="dev">Wordpress theme development</li>
-          <li class="design">Company stationary</li>
+          <li class="design">Company stationery</li>
           <li class="dev">VueJS, AngularJS and Ionic (v1)</li>
         </ul>
       </div>
