--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
             </a>
         </div>
         <h5>
-          Email <span>carlgordon@gmail.com</span>
+          Email <span class="email_address"><span class="copy">carlgordon@gmail.com</span> <svg class="emailbtn" viewBox='0 0 1024 956'>
+            <path d='M128 768h256v64H128v-64z m320-384H128v64h320v-64z m128 192V448L384 640l192 192V704h320V576H576z m-288-64H128v64h160v-64zM128 704h160v-64H128v64z m576 64h64v128c-1 18-7 33-19 45s-27 18-45 19H64c-35 0-64-29-64-64V192c0-35 29-64 64-64h192C256 57 313 0 384 0s128 57 128 128h192c35 0 64 29 64 64v320h-64V320H64v576h640V768zM128 256h512c0-35-29-64-64-64h-64c-35 0-64-29-64-64s-29-64-64-64-64 29-64 64-29 64-64 64h-64c-35 0-64 29-64 64z' />
+          </svg></span>
         </h5>
         <h5>
           Location <span>Fish Hoek, Cape Town</span>
@@ -207,7 +209,8 @@
           <img src="images/wriggle.jpg">
           <p class="portfolio-title">Wriggle and Rhyme</p>
           <p class="portfolio-category more">Logo / web design / corporate identity</p>
-          <p class="portfolio-description">I have been design for wriggle and rhyme for 9 years. I created the logo and all other elements relating to the company, including all the character illustrations</p>
+          <p class="portfolio-description">I have been design for wriggle and rhyme for 9 years. I created the logo and all other elements relating to the company, including all the character illustrations.<br>
+            <a href="http://www.wriggleandrhyme.co.za" target="_blank">www.wriggleandrhyme.co.za</a></p>
         </div>
 
       <div class="portfolio-item dev">
@@ -219,8 +222,10 @@
       <div class="portfolio-item design">
           <img src="images/easy-cheetah.jpg">
           <p class="portfolio-title">Easy Cheetah</p>
-          <p class="portfolio-category">Logo / web design</p>
-          <p class="portfolio-description"></p>
+          <p class="portfolio-category more">Logo design / web design</p>
+          <p class="portfolio-description">
+            I created the logo and website for Easy Cheetah. It is aimed at students to help them learn more efficiently.
+            <br><a href="http://www.easycheetah.com" target="_blank">www.easycheetah.com</a></p>
         </div>
 
       <div class="portfolio-item dev">
@@ -229,6 +234,15 @@
         <p class="portfolio-category more">Front-end development</p>
         <p class="portfolio-description">Working as the sole frontend developer I created a Wordpress theme from underscores.me, using SASS, Gulp, Javascript.</p>
       </div>
+
+      <div class="portfolio-item design">
+        <img src="images/stpeters.jpg">
+        <p class="portfolio-title">St Peters Fish Hoek</p>
+        <p class="portfolio-category more">Logo design / graphic design</p>
+        <p class="portfolio-description">For the past 7 years I have been volunteering my design services for all of the St Peters Church Fish Hoek graphics, this includes slides, banners, brochures, reports, leaflets, posters, online advertising.
+          </br><a target="_blank" href="http://www.stpetersfishhoek.org.za">www.stpetersfishhoek.org.za</a></p>
+      </div>
+
       <div class="portfolio-item dev">
         <img src="images/visi.jpg">
         <p class="portfolio-title"><a href="https://www.visi.co.za" target="_blank">www.visi.co.za</a></p>
