--- a/index.html
+++ b/index.html
@@ -279,7 +279,11 @@
       <div class="experience">
         <h2>Experience</h2>
         <div class="experience-item">
-        <p class="date">June 2013 - Current</p>
+          <p class="date">October 2017 - current</p>
+          <p class="job-title">Freelance Frontend Developer/Designer</p>
+          </div>
+          <div class="experience-item">
+        <p class="date">June 2013 - October 2017</p>
         <p class="company">New Media Publishing</p>
         <p class="job-title">Senior Frontend Developer</p>
         <p class="grey">Working on brands such as Visi, Eat Out, Taste, DSTV, Vodacom and Coronation. Translating designs to code responsive,
