--- a/index.html
+++ b/index.html
@@ -278,8 +278,13 @@
     <div id="experience" class="section">
       <div class="experience">
         <h2>Experience</h2>
+         <div class="experience-item">
+          <p class="date">Feb 2018 - Current</p>
+           <p class="company">MRI Property Software/p>
+          <p class="job-title">Frontend UI Developer</p>
+         </div>
         <div class="experience-item">
-          <p class="date">October 2017 - current</p>
+          <p class="date">October 2017 - Feb 2018</p>
           <p class="job-title">Freelance Frontend Developer/Designer</p>
           </div>
           <div class="experience-item">
