--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <h2>Experience</h2>
          <div class="experience-item">
           <p class="date">Feb 2018 - Current</p>
-           <p class="company">MRI Property Software/p>
+           <p class="company">MRI Property Software</p>
           <p class="job-title">Frontend UI Developer</p>
          </div>
         <div class="experience-item">
