--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
         <h2>Knowledge</h2>
         <ul>
           <li class="dev">Cross-browser compatibility</li>
+          <li class="dev">Cypress end-to-end testing</li>
           <li class="design">Coroporate identity</li>
           <li class="dev">Responsive design</li>
           <li class="design">Web design</li>
@@ -189,7 +190,6 @@
           <li class="design">Posters / Banners</li>
           <li class="dev">Wordpress theme development</li>
           <li class="design">Company stationery</li>
-          <li class="dev">VueJS, AngularJS and Ionic (v1)</li>
         </ul>
       </div>
     </div>
